--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3473,6 +3473,7 @@ input, select, textarea {
 
 				#banner > .inner .content > :last-child {
 					margin-right: 0;
+					margin-top: 30px;
 				}
 
 				#banner > .inner .content p {
