--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1773,7 +1773,7 @@ input, select, textarea {
 		width: -moz-max-content;
 		width: -webkit-max-content;
 		width: -ms-max-content;
-		width: max-content;
+		width: fit-content;
 		margin-bottom: 2em;
 	}
 
@@ -3972,4 +3972,22 @@ input, select, textarea {
 		white-space:normal !important;
 		width:80% !important;
 	}
+}
+
+
+/* modules */
+
+.modulesContaier {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.module .minor {
+	font-size: .5em;
+}
+
+.module {
+	text-align: center;
+	list-style: none;
 }
