--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3996,13 +3996,21 @@ input, select, textarea {
 /* sign up */
 
 #signUp {
+	margin: 5% 0 5% 0;
 	display: flex;
 	justify-content: center;
 	
 }
 
-#form {
+#form{
 	width: 50%;
+	padding: 20px;
+	background: rgba(14, 17, 51, 0.37);
+	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+	backdrop-filter: blur( 2px );
+	-webkit-backdrop-filter: blur( 4px );
+	border-radius: 10px;
+	border: 1px solid rgba(21, 32, 183, 0.37);
 }
 
 #signUpDates{
