--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3999,8 +3999,18 @@ input, select, textarea {
 	margin: 5% 0 5% 0;
 	display: flex;
 	justify-content: center;
-	
+	opacity: 0;
+	-webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+	-moz-animation: fadein 2s forwards; /* Firefox < 16 */
+	 -ms-animation: fadein 2s forwards; /* Internet Explorer */
+	  -o-animation: fadein 2s forwards; /* Opera < 12.1 */
+		 animation: fadein 2s forwards;
 }
+
+@keyframes fadein {
+	from { opacity: 0; }
+	to   { opacity: 1; }
+   }
 
 #form{
 	width: 50%;
