added research-paper-competitve-advantage-from-ai.html page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4082,3 +4082,10 @@ input, select, textarea {
 	width: 100%;
 	text-align: center;
 }
+
+/* reseach */
+
+iframe {
+	width: 90%;
+	height: 80vh;
+}
