--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4056,7 +4056,7 @@ input, select, textarea {
 @supports (-webkit-touch-callout: none) {
 	/* CSS specific to iOS devices */ 
 	input[type=date] {
-		text-align: left;
+		text-align: right;
 		color:#242943;
 	  }
 	  
