--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4053,28 +4053,15 @@ input, select, textarea {
 	color:#242943;
 }
 
-@supports (-webkit-touch-callout: none) {
-	/* CSS specific to iOS devices */ 
-	input[type=date] {
-		text-align: right;
-		color:#242943;
-	  }
-	  
-	  input[type="date"]:before {
-		color: lightgrey;
-		content: attr(placeholder) !important;
-		margin-right: 0.5em;
-	  }
-	
-	  input[type="date"]:before {
-		color: lightgrey;
-		content: attr(placeholder) !important;
-		margin-right: 0.5em;
-	  }
-	  input[type="date"]:focus:before {
-		content: '' !important;
-	  }
-  }
+.date {
+	width: 45% !important;
+	background-color:#242943;!important;
+	color: white !important;
+	height: 50px !important;
+
+}
+
+
 
 @media screen and (max-width: 736px) {
 	#form {
