--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4055,12 +4055,18 @@ input, select, textarea {
 
 .date {
 	width: 45% !important;
-	background-color:#242943 !important;
-	color: white !important;
 	height: 50px !important;
 
 }
 
+
+@supports (-webkit-touch-callout: none) {
+	/* CSS specific to iOS devices */ 
+	input[type="date"]:not(.has-value):before{
+		color: lightgray;
+		content: attr(placeholder);
+	  }
+  }
 
 
 @media screen and (max-width: 736px) {
