--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4060,8 +4060,15 @@ input, select, textarea {
 }
 
 
+
+
 @media screen and (max-width: 736px) {
 	/* CSS specific to iOS devices */ 
+	
+	input[type="date"]:before {
+		content: '' !important;
+	  }
+
 	input[type="date"]:not(.has-value):before{
 		color: #242943;
 		content: attr(placeholder);
