--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4062,13 +4062,8 @@ input, select, textarea {
 
 
 
-@media screen and (max-width: 736px) {
+@supports (-webkit-touch-callout: none) {
 	/* CSS specific to iOS devices */ 
-	
-	input[type="date"]:before {
-		content: '' !important;
-	  }
-
 	input[type="date"]:not(.has-value):before{
 		color: #242943;
 		content: attr(placeholder);
