adjusted index paragraph and moved to about us intro section. moved all current workshops to classes and adjusted page names to reflect their reclassification

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3954,6 +3954,13 @@ input, select, textarea {
 			visibility: visible;
 		}
 
+/* index */
+.flexCenter{
+	display: flex !important;
+	justify-content: center !important;
+	align-items: center !important;
+	text-align: center !important;
+}
 
 /* classes page*/
 
