--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Oswald&family=Roboto&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap');
 
 /*
 	Forty by HTML5 UP
