added feature to remove dates option when workshop is selected as they will have set dates and will not need an input from the user. Added message change above text area based on if workshop or class is selected

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4072,6 +4072,11 @@ input, select, textarea {
 
 }
 
+.hidden { 
+/* to hide dates when workshop is selected */
+	display: none;
+}
+
 
 
 
@@ -4126,6 +4131,12 @@ input, select, textarea {
 	text-align: center;
 }
 
+.center {
+	width: 100%;
+	text-align: center;
+}
+
+
 /* reseach */
 
 iframe {
@@ -4155,3 +4166,5 @@ iframe {
 	from { opacity: 0; }
 	to   { opacity: 1; }
    }
+
+
